<?xml version="1.0"?>
<package>
  <name>autonomous_3d_mapping</name>
  <version>0.0.1</version>
  <description>The autonomous_3d_mapping package</description>
  <maintainer email="capra@todo.todo">capra</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
    <export>
        <metapackage />
    </export>
</package>